feat: added gsap animations for the hero-page

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <div class="hero-content-container">
                 <div class="hero-nav-links">
                     <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Projects</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li class="nav-text-reveal"><a href="">Home</a></li>
+                        <li class="nav-text-reveal"><a href="">About</a></li>
+                        <li class="nav-text-reveal"><a href="">Projects</a></li>
+                        <li class="nav-text-reveal"><a href="">Contact</a></li>
                     </ul>
                 </div>
                 <div class="hero-text">I love bringing <i>ideas</i> to <i>life</i> <br> with code</div>
@@ -36,10 +36,10 @@
                 </div>
                 <div class="down-links">
                     <ul>
-                        <li><a href="https://github.com/olowojude">Github</a></li>
-                        <li><a href="https://www.linkedin.com/in/Jude-olowo-397570232">LinkedIn</a></li>
-                        <li><a href="https://twitter.com/jude_olowo/">Twitter</a></li>
-                        <li><a href="https://judeolowo.hashnode.dev/">Hashnode</a></li>
+                        <li class="down-links-text-reveal"><a href="https://judeolowo.hashnode.dev/">Github</a></li>
+                        <li class="down-links-text-reveal"><a href="https://www.linkedin.com/in/Jude-olowo-397570232">LinkedIn</a></li>
+                        <li class="down-links-text-reveal"><a href="https://twitter.com/jude_olowo/">Twitter</a></li>
+                        <li class="down-links-text-reveal"><a href="https://judeolowo.hashnode.dev/">Hashnode</a></li>
                     </ul>
                 </div>
             </div>
@@ -201,6 +201,6 @@
         </section>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
