refactor: change the the contact form to a simple button

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         Dolorem accusamus ab, corporis quibusdam similique deserunt perferendis in eum.
                     </p>
                     <span class="rotating-link">
-                        <a href="#">
+                        <a href="mailto:judeolowo1@gmail.com">
                             Let's work together 
                         <svg xmlns="http://www.w3.org/2000/svg" class="lets-work-together-svg svg" viewBox="0 0 384 512"><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg>
                         </a>
@@ -182,12 +182,9 @@
             <span class="contact-heading">
                 Want to colloborate on any project or have any questions? Go ahead..
             </span>
-            <form method="POST" action="">
-                <input type="text" name="name" id="name" placeholder="Name">
-                <input type="text" name="email" id="email" placeholder="Email">
-                <textarea name="message" rows="1" id="message" placeholder="Message"></textarea>
-                <input type="submit" id="submit" value="Submit  →" >
-            </form>
+            <!-- send me an email -->
+            <a class="send-email" href="mailto:judeolowo1@gmail.com">Send me an email</a>
+
             <div class="icons">
                 <a href="https://github.com/olowojude"><img class="icon" src="./icons/icons8-github.svg" alt=""></a>
                 <a href="https://www.linkedin.com/in/Jude-olowo-397570232"><img class="icon" src="./icons/icons8-linkedin-circled.svg" alt=""></a>
