Fix: Fix fonts issues + addition of GSAP animations to 2nd and 3rd section

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <!-- THIRD SECTION -->
         <section class="third-section">
             <div class="third-section-content">
-                <img src="./images/my pic.jpg" alt="">
+                <img class="my-pic" src="./images/my pic.jpg" alt="">
                 <div class="third-section-text-container">
                     <div class="title-heading">
                         <span class="title">Full Stack Developer</span><br><span class="smaller-title">and Technical Writer</span>
@@ -102,7 +102,7 @@
                         <div class="project-title">
                             <h1>My Blog</h1>
                             <div class="view-project">
-                                <a href="#">Live site <svg class="svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a><br>
+                                <a href="https://jude-olowo-blog.up.railway.app/">Live site <svg class="svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a><br>
                                 
                             </div>
                         </div>
@@ -183,7 +183,7 @@
                 Want to colloborate on any project or have any questions? Go ahead..
             </span>
             <!-- send me an email -->
-            <a class="send-email" href="mailto:judeolowo1@gmail.com">Send me an email</a>
+            <a class="send-email" href="mailto:judeolowo1@gmail.com">Contact me</a>
 
             <div class="icons">
                 <a href="https://github.com/olowojude"><img class="icon" src="./icons/icons8-github.svg" alt=""></a>
@@ -197,7 +197,8 @@
             <span>Designed and Developed by Jude</span>
         </section>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
