Style: Finish GSAP animations for the remaining sections + site clean up

--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://kit.fontawesome.com/1062cf60f1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/style.css">
     <title>Olowo Jude</title>
 </head>
 <body>
     <div class="container">
-        <section class="hero-section">
+        <section id="home" class="hero-section">
             
             <header>
                 <nav>
-                    <span>
+                    <span class="logo-text">
                         Olowo Jude
                     </span>
                 </nav>
@@ -24,10 +23,10 @@
             <div class="hero-content-container">
                 <div class="hero-nav-links">
                     <ul>
-                        <li class="nav-text-reveal"><a href="">Home</a></li>
-                        <li class="nav-text-reveal"><a href="">About</a></li>
-                        <li class="nav-text-reveal"><a href="">Projects</a></li>
-                        <li class="nav-text-reveal"><a href="">Contact</a></li>
+                        <li class="nav-text-reveal"><a href="#home">Home</a></li>
+                        <li class="nav-text-reveal"><a href="#about">About</a></li>
+                        <li class="nav-text-reveal"><a href="#projects">Projects</a></li>
+                        <li class="nav-text-reveal"><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="hero-text">I love bringing <i>ideas</i> to <i>life</i> <br> with code</div>
@@ -36,10 +35,10 @@
                 </div>
                 <div class="down-links">
                     <ul>
-                        <li class="down-links-text-reveal"><a href="https://judeolowo.hashnode.dev/">Github</a></li>
+                        <li class="down-links-text-reveal"><a href="https://github.com/olowojude">Github</a></li>
                         <li class="down-links-text-reveal"><a href="https://www.linkedin.com/in/Jude-olowo-397570232">LinkedIn</a></li>
                         <li class="down-links-text-reveal"><a href="https://twitter.com/jude_olowo/">Twitter</a></li>
-                        <li class="down-links-text-reveal"><a href="https://judeolowo.hashnode.dev/">Hashnode</a></li>
+                        <li class="down-links-text-reveal"><a href="https://judeolowo.hashnode.dev/">Blog</a></li>
                     </ul>
                 </div>
             </div>
@@ -47,7 +46,7 @@
         </section>
 
         <!-- SECOND SECTION -->
-        <section class="second-section">
+        <section id="about" class="second-section">
             <div class="second-section-content">
                 <div class="second-section-text-container">
                     Hello there, <br><span class="intro-break">I'm Jude ... 
@@ -87,7 +86,8 @@
                 Tech Stack: Python ● JavaScript ● Django ● DRF ● Fast Api ● React JS ● SQL ● PostgreSQL ● HTML ● CSS ● Bootstrap ● SASS ● Tailwind CSS
             </marquee>
         </section>
-        <section class="projects-section">
+
+        <section id="projects" class="projects-section">
             <div class="projects-section-content-container">
                 <span class="projects-heading">My Works <img src="./images/hand-left..webp" alt=""> </span>
 
@@ -125,7 +125,7 @@
                         <div class="project-title">
                             <h1>Link-It</h1>
                             <div class="view-project">
-                                <a href="#">Live site <svg class="svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a><br>
+                                <a href="https://github.com/olowojude/Link-tree">Live site <svg class="svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a><br>
                             </div>
                         </div>
                         <div class="project-info">
@@ -147,13 +147,13 @@
                         <div class="project-title">
                             <h1>Meme Generator</h1>
                             <div class="view-project">
-                                <a href="#"> Live site<svg class="svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a><br>
+                                <a href="https://meme-generatoor.netlify.app/"> Live site<svg class="svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a><br>
                             </div>
                         </div>
                         <div class="project-info">
                             <span class="project-features">
                                 <h3 class="project-overview">Project Overview</h3>
-                                A Meme Generator that generates random memes images for users and alloes them create memes using those images. 
+                                A Meme Generator that generates random memes images for users and allows them create memes using those images. 
                                 An additional feature is that users can download whatever meme they've created.
                             </span>
                             <span class="project-stack">HTML, SCSS, React JS</span>
@@ -178,10 +178,10 @@
             </ul> -->
 
         </section>
-        <section class="contact">
-            <span class="contact-heading">
+        <section id="contact" class="contact">
+            <div class="contact-heading">
                 Want to colloborate on any project or have any questions? Go ahead..
-            </span>
+            </div>
             <!-- send me an email -->
             <a class="send-email" href="mailto:judeolowo1@gmail.com">Contact me</a>
 
@@ -194,7 +194,8 @@
         </section>
         <hr>
         <section class="footer">
-            <span>Designed and Developed by Jude</span>
+            <span>Designed and Developed by Jude</span> <br>
+            <a href="#home" class="back-to-top">Back to top</a>
         </section>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
