--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                     <div class="project-title">
                         <h1>Link-It</h1>
                         <div class="view-project">
-                            <a href="#">Live site <svg class="svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a><br>
+                            <a href="https://github.com/olowojude/Link-tree">Live site <svg class="svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a><br>
                         </div>
                     </div>
                     <div class="project-info">
@@ -67,13 +67,13 @@
                     <div class="project-title">
                         <h1>Meme Generator</h1>
                         <div class="view-project">
-                            <a href="#"> Live site<svg class="svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a><br>
+                            <a href="https://meme-generatoor.netlify.app/"> Live site<svg class="svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a><br>
                         </div>
                     </div>
                     <div class="project-info">
                         <span class="project-features">
                             <h3 class="project-overview">Project Overview</h3>
-                            A Meme Generator that generates random memes images for users and alloes them create memes using those images. 
+                            A Meme Generator that generates random memes images for users and allows them create memes using those images. 
                             An additional feature is that users can download whatever meme they've created.
                         </span>
                         <span class="project-stack">HTML, SCSS, React JS</span>
@@ -110,7 +110,7 @@
                     <div class="project-title">
                         <h1>Merry Christmas Site</h1>
                         <div class="view-project">
-                            <a href="#">Live site <svg class="svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a><br>
+                            <a href="https://olowojude.github.io/Merry-Christmas/">Live site <svg class="svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a><br>
                         </div>
                     </div>
                     <div class="project-info">
