Style: Site cleanup

--- a/index.html
+++ b/index.html
@@ -160,22 +160,15 @@
                         </div>
                     </div>
                 </section>
-                <div class="horizontal-line"></div>
-                <span class="rotating-link second-rotating-link" id="second-rotating-link">
-                    <a href="./projects.html">See more <svg class="svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a>
-                </span>
+                <section>
+                    <div class="horizontal-line"></div>
+                    <span class="rotating-link second-rotating-link" id="second-rotating-link">
+                        <a href="./projects.html">See more <svg class="svg" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg></a>
+                    </span>
+                </section>
+                
 
             </div>
-            <!-- <div class="navigation-list project-list-container">
-                <div class="navigation-item">
-                    <a class="navigation-link navigation-link-1" href="">
-                        <div class="project-heading">
-                            <span>01</span>
-                            <span data-text="My Blog" class="project-name">My Blog</span>
-                        </div>
-                    </a>
-                </li>
-            </ul> -->
 
         </section>
         <section id="contact" class="contact">
