--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
                 <!-- 2ND PROJECT -->
                 <section class="individual-project">
-                    <img src="./images/link-it.png" alt="">
+                    <img src="./images/linkit.png" alt="">
                     <div class="project-description">
                         <div class="project-title">
                             <h1>Link-It</h1>
