Style: Site cleanup

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <div class="project-info">
                             <span class="project-features">
                                 <h3 class="project-overview">Project Overview</h3>
-                                My personal Blog where i share my thoughts, ideas and experiences on a variety of topics that excite me. From personal development to technology and everything in between.
+                                My personal blog where i share my thoughts, ideas and experiences on a variety of topics that excite me. From personal development to technology and everything in between.
                                 Additional features includes, A comments section where readers can make comments after each blog post and a contact section where readers can easily reach out to me via email.
                             </span>
                             <span class="project-stack">HTML, CSS, Django, PostgreSQL</span>
@@ -154,12 +154,13 @@
                             <span class="project-features">
                                 <h3 class="project-overview">Project Overview</h3>
                                 A Meme Generator that generates random memes images for users and allows them create memes using those images. 
-                                An additional feature is that users can download whatever meme they've created.
+                                An additional feature i'm working on is for users to be able to download whatever meme they've created.
                             </span>
                             <span class="project-stack">HTML, SCSS, React JS</span>
                         </div>
                     </div>
                 </section>
+                <!-- END OF PROJECTS SECTION -->
                 <section>
                     <div class="horizontal-line"></div>
                     <span class="rotating-link second-rotating-link" id="second-rotating-link">
