--- a/projects.html
+++ b/projects.html
@@ -29,8 +29,8 @@
                     <div class="project-info">
                         <span class="project-features">
                             <h3 class="project-overview">Project Overview</h3>
-                            My personal Blog where i share my thoughts, ideas and experiences on a variety of topics that excite me. From personal development to technology and everything in between.
-                            Additional features includes, A comments section where readers can make comments after each blog post and also a contact section where readers can easily reach out to me via email if they have any questions.
+                            My personal blog where i share my thoughts, ideas and experiences on a variety of topics that excite me. From personal development to technology and everything in between.
+                            Additional features includes, A comments section where readers can make comments after each blog post and a contact section where readers can easily reach out to me via email.
                         </span>
                         <span class="project-stack">HTML, CSS, Django, PostgreSQL</span>
                     </div>
@@ -40,7 +40,7 @@
 
             <!-- 2ND PROJECT -->
             <section class="individual-project">
-                <img src="./images/link-it.png" alt="">
+                <img src="./images/linkit.png" alt="">
                 <div class="project-description">
                     <div class="project-title">
                         <h1>Link-It</h1>
@@ -51,7 +51,7 @@
                     <div class="project-info">
                         <span class="project-features">
                             <h3 class="project-overview">Project Overview</h3>
-                            Link-It is a LinkTree clone, that allows users to create personalized landing pages where they can manage all their online links and social media pages. Other features include user authentication, user profile functionality, allowing users to create and manage their profiles(profile images are also supported). It also includes a forgotten password feature that allows users to easily reset their old password and regain access to their account.
+                            Link-It is a LinkTree clone, that allows users to create personalized landing pages where they can manage all their online links and social media pages. Other features include user authentication, user profile functionality, allowing users to create and manage their profiles(profile images are also supported). It also includes a forgotten password feature that allows users to easily reset their old password and regain access to their account. 
                             Link-It is a good choice for anyone looking to streamline and organize their online presence.
                         </span>
                         <span class="project-stack">HTML, SCSS, JavaScript, Django, PostgreSQL</span>
@@ -74,7 +74,7 @@
                         <span class="project-features">
                             <h3 class="project-overview">Project Overview</h3>
                             A Meme Generator that generates random memes images for users and allows them create memes using those images. 
-                            An additional feature is that users can download whatever meme they've created.
+                            An additional feature i'm working on is for users to be able to download whatever meme they've created.
                         </span>
                         <span class="project-stack">HTML, SCSS, React JS</span>
                     </div>
